--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -11,11 +11,11 @@ body {
     height: 100%;
     width: 100%;
     margin: 0;
-    font-family: "Arial", "Helvetica", sans-serif;
+    font-family: var(--font-family-main-400);
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
-    line-height: 1;
+    font-size: 18px;
+    line-height: 135%;
     text-size-adjust: 100%;
     //color: $main-color;
 }
