--- a/src/scss/blocks/_container.scss
+++ b/src/scss/blocks/_container.scss
@@ -1,5 +1,6 @@
 .container {
-    max-width: $max-width;
-    padding: 0 15px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: $max-width;
+  padding: 0 15px;
+  margin: 0 auto;
 }
