--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,1 +1,68 @@
-.header {}
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-color: rgba($vulcan, 0.9);
+  transition: height .2s ease;
+}
+
+.header--compressed {
+  height: 70px;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.header__logo {
+  display: block;
+  margin-right: auto;
+  font-family: var(--font-family-secondary-800);
+  font-weight: 800;
+  font-size: 28px;
+  line-height: 33px;
+  color: $white-color;
+
+  & span {
+    color: $picton-blue;
+  }
+}
+
+.header__menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header__item {
+
+  & + .header__item {
+    margin-left: 60px;
+  }
+}
+
+.header__link {
+  font-family: var(--font-family-main-600);
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: $white-color;
+  cursor: pointer;
+}
+
+@media (min-width: 1023.98px) AND (hover) {
+
+  .header__link {
+    transition: color .2s ease-in;
+  }
+
+  .header__link:hover {
+    color: $picton-blue-2;
+  }
+}
