--- a/app/css/style.css
+++ b/app/css/style.css
@@ -6,8 +6,8 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "Lato-SemiBold";
-  src: url("../fonts/Lato-SemiBold.woff2") format("woff2"), url("../Lato-SemiBold.woff") format("woff");
+  font-family: "Lato-Regular";
+  src: url("../fonts/Lato-Regular.woff2") format("woff2"), url("../Lato-Regular.woff") format("woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -20,8 +20,8 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "Lato-Regular";
-  src: url("../fonts/Lato-Regular.woff2") format("woff2"), url("../Lato-Regular.woff") format("woff");
+  font-family: "Lato-SemiBold";
+  src: url("../fonts/Lato-SemiBold.woff2") format("woff2"), url("../Lato-SemiBold.woff") format("woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -76,10 +76,13 @@ img {
   --picton-blue: #42A9ED;
   --picton-blue-2: #43ABF0;
   --havelock-blue: #3E9CDC;
+  --storm-gray: #6F6D7B;
+  --shark: #2A2B30;
   --font-family-main-400: "Lato-Regular", Helvetica, Arial, sans-serif;
   --font-family-main-600: "Lato-SemiBold", Helvetica, Arial, sans-serif;
   --font-family-main-700: "Lato-Bold", Helvetica, Arial, sans-serif;
   --font-family-secondary-800: "Raleway-ExtraBold", "Helvetica Neue", "Arial Black", Arial, sans-serif;
+  --border-radius-small: 4px;
 }
 
 .visually-hidden {
@@ -97,12 +100,78 @@ img {
 }
 
 .button {
-  padding: 0;
   display: flex;
   align-items: center;
-  color: #FFFFFF;
-  border: none;
+  justify-content: center;
+  border: 1px solid transparent;
+  border-radius: var(--border-radius-small);
+  padding: 5px 10px;
+  font-family: var(--font-family-main-600);
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000000;
   background-color: transparent;
+}
+.button--small {
+  min-width: 183px;
+  min-height: 43px;
+  font-family: var(--font-family-main-400);
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+}
+.button--blue {
+  border: 1px solid #FFFFFF;
+  color: #FFFFFF;
+  background-color: #3E9CDC;
+}
+.button--white {
+  border: 1px solid #6F6D7B;
+  color: #2A2B30;
+  background-color: #FFFFFF;
+}
+@media (min-width: 1023.98px) and (hover) {
+  .button {
+    transition: border 0.2s ease-in, color 0.2s ease-in;
+  }
+  .button--blue:hover {
+    background-color: #42A9ED;
+  }
+  .button--white:hover {
+    border: 1px solid #42A9ED;
+    color: #42A9ED;
+  }
+}
+
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.list--dash li {
+  position: relative;
+  margin-bottom: 5px;
+  padding-left: 25px;
+  font-family: var(--font-family-main-400);
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+}
+.list--dash li::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 11px;
+  width: 5px;
+  height: 2px;
+  background-color: #000000;
+}
+.list--dash li:last-child {
+  margin-bottom: 0;
 }
 
 .container {
@@ -119,9 +188,8 @@ img {
   width: 100%;
   height: 100px;
   background-color: rgba(16, 16, 29, 0.9);
-  transition: height 0.2s ease;
+  transition: height 0.2s linear;
 }
-
 .header--compressed {
   height: 70px;
 }
@@ -209,5 +277,33 @@ img {
 .hero__paragraph--bold {
   font-family: var(--font-family-main-700);
   font-weight: 700;
+}
+
+.hero__list {
+  margin-bottom: 80px;
+}
+
+.hero__actions {
+  display: flex;
+}
+
+.hero__button + .hero__button {
+  margin-left: 30px;
+}
+
+@media (min-width: 767.98px) and (max-width: 991.98px) {
+  .hero {
+    background-position: 63% 50%;
+  }
+}
+@media (max-width: 767.98px) {
+  .hero__title br {
+    display: none;
+  }
+}
+@media (min-width: 479.98px) and (max-width: 767.98px) {
+  .hero {
+    background-position: 5% 50%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
