--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Lato-Bold";
   src: url("../fonts/Lato-Bold.woff2") format("woff2"), url("../Lato-Bold.woff") format("woff");
@@ -13,15 +14,15 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "Raleway-ExtraBold";
-  src: url("../fonts/Raleway-ExtraBold.woff2") format("woff2"), url("../Raleway-ExtraBold.woff") format("woff");
+  font-family: "Lato-SemiBold";
+  src: url("../fonts/Lato-SemiBold.woff2") format("woff2"), url("../Lato-SemiBold.woff") format("woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
-  font-family: "Lato-SemiBold";
-  src: url("../fonts/Lato-SemiBold.woff2") format("woff2"), url("../Lato-SemiBold.woff") format("woff");
+  font-family: "Raleway-ExtraBold";
+  src: url("../fonts/Raleway-ExtraBold.woff2") format("woff2"), url("../Raleway-ExtraBold.woff") format("woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -85,6 +86,10 @@ img {
   --border-radius-small: 4px;
 }
 
+.body--blocked {
+  overflow: hidden;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -144,6 +149,72 @@ img {
     border: 1px solid #42A9ED;
     color: #42A9ED;
   }
+}
+
+.burger {
+  position: relative;
+  z-index: 10;
+  outline: 0;
+  border: none;
+  width: 40px;
+  height: 30px;
+  background: transparent;
+}
+
+.burger:focus {
+  outline: 0;
+}
+
+.burger span:nth-child(2) {
+  position: absolute;
+  top: 14px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 2px;
+  background-color: #FFFFFF;
+  transition: width 0.3s linear;
+}
+
+.burger span:nth-child(1) {
+  position: absolute;
+  top: 8px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20px;
+  height: 2px;
+  background-color: #FFFFFF;
+  transition: top 0.3s 0.3s, transform 0.3s linear;
+  transform-origin: 50% 50%;
+}
+
+.burger span:nth-child(3) {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 20px;
+  height: 2px;
+  background-color: #FFFFFF;
+  transition: top 0.3s 0.3s, transform 0.3s linear;
+  transform-origin: 50% 50%;
+}
+
+.menu--active .burger span:nth-child(2) {
+  width: 0;
+  transition: width 0.3s linear;
+}
+
+.menu--active .burger span:nth-child(1) {
+  top: 14px;
+  transform: translateX(-50%) rotate(-45deg);
+  transition: top 0.3s, transform 0.3s 0.3s linear;
+}
+
+.menu--active .burger span:nth-child(3) {
+  top: 14px;
+  transform: translateX(-50%) rotate(45deg);
+  transition: top 0.3s, transform 0.3s 0.3s linear;
 }
 
 .list {
@@ -220,11 +291,8 @@ img {
   padding: 0;
 }
 
-.header__item + .header__item {
-  margin-left: 60px;
-}
-
 .header__link {
+  display: inline-block;
   font-family: var(--font-family-main-600);
   font-weight: 600;
   font-size: 13px;
@@ -234,12 +302,130 @@ img {
   cursor: pointer;
 }
 
+.header__burger {
+  display: none;
+}
+
 @media (min-width: 1023.98px) and (hover) {
   .header__link {
     transition: color 0.2s ease-in;
   }
   .header__link:hover {
     color: #43ABF0;
+  }
+}
+@media (min-width: 899.98px) {
+  .header__item + .header__item {
+    margin-left: 60px;
+  }
+}
+@media (min-width: 767.98px) and (max-width: 899.98px) {
+  .header__item + .header__item {
+    margin-left: 40px;
+  }
+}
+@media (max-width: 767.98px) {
+  .header__logo {
+    z-index: 12;
+  }
+  .header__nav {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    z-index: 0;
+    padding: 100px 60px;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    transition-duration: 0s;
+    transition-delay: 0.4s;
+  }
+  .menu--active .header__nav {
+    top: 0;
+    transition-delay: 0.4s;
+  }
+  /* Левая створка */
+  .header__nav::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: -52%;
+    width: 51%;
+    height: 100%;
+    background-color: #10101d;
+    transition: left 0.3s ease-in 0.3s;
+  }
+  /* Левая створка "закрыта" */
+  .menu--active .header__nav::before {
+    left: 0;
+    transition-delay: 0s;
+  }
+  /* Правая створка */
+  .header__nav::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    right: -52%;
+    width: 51%;
+    height: 100%;
+    background-color: #10101d;
+    transition: right 0.3s ease-in 0.3s;
+  }
+  /* Правая створка "закрыта" */
+  .menu--active .header__nav::after {
+    right: 0;
+    transition-delay: 0s;
+  }
+  .header__menu {
+    position: relative;
+    z-index: 1;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .header__item + .header__item {
+    margin-top: 40px;
+  }
+  .header__link {
+    position: relative;
+    opacity: 0;
+    transition: opacity 0.35s cubic-bezier(0.767, 0.01, 0.18, 1.01);
+  }
+  /* Из активного в неактивное состояние */
+  .header__item:nth-child(1) .header__link {
+    transition-duration: 0.2s;
+    transition-delay: 0.14s;
+  }
+  .header__item:nth-child(2) .header__link {
+    transition-duration: 0.2s;
+    transition-delay: 0.1s;
+  }
+  .header__item:nth-child(3) .header__link {
+    transition-duration: 0.2s;
+    transition-delay: 0.06s;
+  }
+  .header__item:nth-child(4) .header__link {
+    transition-duration: 0.2s;
+    transition-delay: 0.02s;
+  }
+  .menu--active .header__link {
+    opacity: 1;
+  }
+  .menu--active .header__item:nth-child(1) .header__link {
+    transition-delay: 0.3s;
+  }
+  .menu--active .header__item:nth-child(2) .header__link {
+    transition-delay: 0.35s;
+  }
+  .menu--active .header__item:nth-child(3) .header__link {
+    transition-delay: 0.4s;
+  }
+  .menu--active .header__item:nth-child(4) .header__link {
+    transition-delay: 0.45s;
+  }
+  .header__burger {
+    z-index: 11;
+    display: block;
   }
 }
 .hero {
