--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -39,14 +39,8 @@
   padding: 0;
 }
 
-.header__item {
-
-  & + .header__item {
-    margin-left: 60px;
-  }
-}
-
 .header__link {
+  display: inline-block;
   font-family: var(--font-family-main-600);
   font-weight: 600;
   font-size: 13px;
@@ -54,6 +48,10 @@
   text-transform: uppercase;
   color: $white-color;
   cursor: pointer;
+}
+
+.header__burger {
+  display: none;
 }
 
 @media (min-width: 1023.98px) AND (hover) {
@@ -65,4 +63,145 @@
   .header__link:hover {
     color: $picton-blue-2;
   }
+}
+
+@media (min-width: 899.98px) {
+
+  .header__item + .header__item {
+    margin-left: 60px;
+  }
+}
+
+@media (min-width: 767.98px) AND (max-width: 899.98px) {
+
+  .header__item + .header__item {
+    margin-left: 40px;
+  }
+}
+
+@media (max-width: 767.98px) {
+
+  .header__logo {
+    z-index: 12;
+  }
+
+  .header__nav {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    z-index: 0;
+    padding: 100px 60px;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    transition-duration: 0s;
+    transition-delay: .4s;
+  }
+
+  .menu--active .header__nav {
+    top: 0;
+    transition-delay: .4s;
+  }
+
+  /* Левая створка */
+  .header__nav::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: -52%;
+    width: 51%;
+    height: 100%;
+    background-color: rgba($vulcan, 1);
+    transition: left .3s ease-in .3s;
+  }
+
+  /* Левая створка "закрыта" */
+  .menu--active .header__nav::before {
+    left: 0;
+    transition-delay: 0s;
+  }
+
+  /* Правая створка */
+  .header__nav::after {
+    content: '';
+    position: fixed;
+    top: 0;
+    right: -52%;
+    width: 51%;
+    height: 100%;
+    background-color: rgba($vulcan, 1);
+    transition: right .3s ease-in .3s;
+  }
+
+  /* Правая створка "закрыта" */
+  .menu--active .header__nav::after {
+    right: 0;
+    transition-delay: 0s;
+  }
+
+  .header__menu {
+    position: relative;
+    z-index: 1;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .header__item + .header__item {
+    margin-top: 40px;
+  }
+
+  .header__link {
+    position: relative;
+    opacity: 0;
+    transition: opacity .35s cubic-bezier(0.767, 0.01, 0.18, 1.01);
+  }
+
+  /* Из активного в неактивное состояние */
+  .header__item:nth-child(1) .header__link {
+    transition-duration: .2s;
+    transition-delay: .14s;
+  }
+
+  .header__item:nth-child(2) .header__link {
+    transition-duration: .2s;
+    transition-delay: .1s;
+  }
+
+  .header__item:nth-child(3) .header__link {
+    transition-duration: .2s;
+    transition-delay: .06s;
+  }
+
+  .header__item:nth-child(4) .header__link {
+    transition-duration: .2s;
+    transition-delay: .02s;
+  }
+
+  .menu--active .header__link {
+    opacity: 1;
+  }
+
+  .menu--active .header__item:nth-child(1) .header__link {
+    transition-delay: .3s;
+  }
+
+  .menu--active .header__item:nth-child(2) .header__link {
+    transition-delay: .35s;
+  }
+
+  .menu--active .header__item:nth-child(3) .header__link {
+    transition-delay: .4s;
+  }
+
+  .menu--active .header__item:nth-child(4) .header__link {
+    transition-delay: .45s;
+  }
+
+  .header__burger {
+    z-index: 11;
+    display: block;
+  }
+
+
 }
