--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,9 +30,11 @@ $havelock-blue: #3E9CDC;
 $storm-gray: #6F6D7B;
 $shark: #2A2B30;
 
+@import "blocks/body";
 @import "blocks/visually-hidden";
 @import "blocks/page";
 @import "blocks/button";
+@import "blocks/burger";
 @import "blocks/list";
 @import "blocks/container";
 @import "blocks/main";
