--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -38,7 +38,9 @@
   @media (min-width: 1023.98px) AND (hover) {
 
     & {
-      transition: border .2s ease-in, color .2s ease-in;
+      transition: border .2s var(--transition-main),
+                  color .2s var(--transition-main),
+                  background-color .2s var(--transition-main);
     }
 
     &--blue:hover {
