--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,8 @@
   --font-family-secondary-800: "Raleway-ExtraBold", "Helvetica Neue", "Arial Black", Arial, sans-serif;
 
   --border-radius-small: 4px;
+
+  --transition-main: cubic-bezier(0.767, 0.01, 0.18, 1.01);
 }
 
 $white-color: #FFFFFF;
