--- a/app/css/style.css
+++ b/app/css/style.css
@@ -84,6 +84,7 @@ img {
   --font-family-main-700: "Lato-Bold", Helvetica, Arial, sans-serif;
   --font-family-secondary-800: "Raleway-ExtraBold", "Helvetica Neue", "Arial Black", Arial, sans-serif;
   --border-radius-small: 4px;
+  --transition-main: cubic-bezier(0.767, 0.01, 0.18, 1.01);
 }
 
 .body--blocked {
@@ -140,7 +141,7 @@ img {
 }
 @media (min-width: 1023.98px) and (hover) {
   .button {
-    transition: border 0.2s ease-in, color 0.2s ease-in;
+    transition: border 0.2s var(--transition-main), color 0.2s var(--transition-main), background-color 0.2s var(--transition-main);
   }
   .button--blue:hover {
     background-color: #42A9ED;
@@ -259,9 +260,9 @@ img {
   width: 100%;
   height: 100px;
   background-color: rgba(16, 16, 29, 0.9);
-  transition: height 0.2s linear;
+  transition: height 0.2s var(--transition-main);
 }
-.header--compressed {
+.header.header--compressed {
   height: 70px;
 }
 
@@ -308,7 +309,7 @@ img {
 
 @media (min-width: 1023.98px) and (hover) {
   .header__link {
-    transition: color 0.2s ease-in;
+    transition: color 0.2s var(--transition-main);
   }
   .header__link:hover {
     color: #43ABF0;
@@ -325,6 +326,21 @@ img {
   }
 }
 @media (max-width: 767.98px) {
+  .header {
+    position: relative;
+    height: 85px;
+  }
+  .header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 11;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(16, 16, 29, 0);
+    transition: background-color 0.3s var(--transition-main) 0.1s;
+  }
   .header__logo {
     z-index: 12;
   }
@@ -333,48 +349,29 @@ img {
     top: -100%;
     left: 0;
     z-index: 0;
-    padding: 100px 60px;
+    overflow-y: auto;
+    padding: 100px 60px 40px;
     width: 100%;
     height: 100%;
     background-color: transparent;
     transition-duration: 0s;
     transition-delay: 0.4s;
   }
-  .menu--active .header__nav {
-    top: 0;
-    transition-delay: 0.4s;
-  }
-  /* Левая створка */
-  .header__nav::before {
+  .header__nav::before, .header__nav::after {
     content: "";
     position: fixed;
     top: 0;
-    left: -52%;
     width: 51%;
     height: 100%;
     background-color: #10101d;
+  }
+  .header__nav::before {
+    left: -52%;
     transition: left 0.3s ease-in 0.3s;
   }
-  /* Левая створка "закрыта" */
-  .menu--active .header__nav::before {
-    left: 0;
-    transition-delay: 0s;
-  }
-  /* Правая створка */
   .header__nav::after {
-    content: "";
-    position: fixed;
-    top: 0;
     right: -52%;
-    width: 51%;
-    height: 100%;
-    background-color: #10101d;
     transition: right 0.3s ease-in 0.3s;
-  }
-  /* Правая створка "закрыта" */
-  .menu--active .header__nav::after {
-    right: 0;
-    transition-delay: 0s;
   }
   .header__menu {
     position: relative;
@@ -408,9 +405,7 @@ img {
     transition-duration: 0.2s;
     transition-delay: 0.02s;
   }
-  .menu--active .header__link {
-    opacity: 1;
-  }
+  /* Из неактивного в активное состояние */
   .menu--active .header__item:nth-child(1) .header__link {
     transition-delay: 0.3s;
   }
@@ -426,6 +421,56 @@ img {
   .header__burger {
     z-index: 11;
     display: block;
+  }
+  /* Бургер меню открыто */
+  .menu--active {
+    /* Левая створка "закрыта" */
+    /* Правая створка "закрыта" */
+  }
+  .menu--active.header::before {
+    background-color: #10101d;
+  }
+  .menu--active .header__nav {
+    top: 0;
+    transition-delay: 0.4s;
+  }
+  .menu--active .header__nav::before {
+    left: 0;
+    transition-delay: 0s;
+  }
+  .menu--active .header__nav::after {
+    right: 0;
+    transition-delay: 0s;
+  }
+  .menu--active .header__link {
+    opacity: 1;
+  }
+}
+@media (max-width: 549.98px) {
+  .header {
+    height: 70px;
+  }
+  .header.header--compressed {
+    height: 60px;
+  }
+  .header__logo {
+    font-size: 24px;
+    line-height: 29px;
+  }
+}
+@media (max-width: 419.98px) {
+  .header {
+    height: 60px;
+  }
+  .header.header--compressed {
+    height: 50px;
+  }
+  .header__logo {
+    font-size: 22px;
+    line-height: 27px;
+  }
+  .header__nav {
+    padding: 85px 45px;
   }
 }
 .hero {
