--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -16,7 +16,7 @@
 
   &--small {
     min-width: 183px;
-    min-height: 43px;
+    height: 43px;
     font-family: var(--font-family-main-400);
     font-weight: 400;
     font-size: 13px;
