--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,3 +1,4 @@
+@include font-face("Lato-ExtraBold", "Lato-ExtraBold", 400);
 @include font-face("Lato-Bold", "Lato-Bold", 400);
 @include font-face("Lato-Regular", "Lato-Regular", 400);
 @include font-face("Lato-SemiBold", "Lato-SemiBold", 400);
