--- a/src/scss/blocks/_order.scss
+++ b/src/scss/blocks/_order.scss
@@ -6,15 +6,6 @@
   background-repeat: no-repeat;
 }
 
-.webp .order {
-  background-image: linear-gradient(rgba($charade, 0.9), rgba($charade, 0.9)), url("../../images/order/bg.webp");
-}
-
-.no-js .order,
-.no-webp .order {
-  background-image: linear-gradient(rgba($charade, 0.9), rgba($charade, 0.9)), url("../../images/order/bg.jpg");
-}
-
 .order__title {
   margin: 0;
   margin-bottom: 30px;
@@ -42,4 +33,31 @@
 
 .order__scheme {
   margin-bottom: 80px;
+}
+
+@media (min-width: 991.98px) {
+
+  .webp .order {
+    background-image: linear-gradient(rgba($charade, 0.9), rgba($charade, 0.9)), url("../../images/order/bg.webp");
+  }
+
+  .no-js .order,
+  .no-webp .order {
+    background-image: linear-gradient(rgba($charade, 0.9), rgba($charade, 0.9)), url("../../images/order/bg.jpg");
+  }
+}
+
+@media (max-width: 991.98px) {
+
+  .order {
+    background-color: rgba($charade, 0.9);
+  }
+}
+
+@media (max-width: 419.98px) {
+
+  .order__title {
+    font-size: 32px;
+    line-height: 39px;
+  }
 }
