styled the form select element

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
   --vulcan: #10101D;
   --shark: #2A2B30;
   --charade: #272733;
+  --bright-gray: #3D4050;
 
   --font-family-main-400: "Lato-Regular", Helvetica, Arial, sans-serif;
   --font-family-main-600: "Lato-SemiBold", Helvetica, Arial, sans-serif;
@@ -41,6 +42,7 @@ $silver-2: #C4C4C4;
 $vulcan: #10101D;
 $shark: #2A2B30;
 $charade: #272733;
+$bright-gray: #3D4050;
 
 @import "blocks/body";
 @import "blocks/visually-hidden";
