--- a/app/css/style.css
+++ b/app/css/style.css
@@ -90,6 +90,7 @@ img {
   --vulcan: #10101D;
   --shark: #2A2B30;
   --charade: #272733;
+  --bright-gray: #3D4050;
   --font-family-main-400: "Lato-Regular", Helvetica, Arial, sans-serif;
   --font-family-main-600: "Lato-SemiBold", Helvetica, Arial, sans-serif;
   --font-family-main-700: "Lato-Bold", Helvetica, Arial, sans-serif;
@@ -821,6 +822,7 @@ img {
 
 .form__input,
 .choices__inner {
+  position: relative;
   border: 1px solid rgba(255, 255, 255, 0.85);
   border-radius: var(--border-radius-xsmall);
   padding: 12px 36px 12px 10px;
@@ -852,5 +854,52 @@ img {
 /* Choices plugin blocks */
 .choices__list--single {
   padding: 0;
+}
+
+.choices[data-type*=select-one]::after {
+  position: absolute;
+  top: 42%;
+  right: 16px;
+  margin: 0;
+  border: none;
+  width: 9px;
+  height: 7px;
+  background-image: url("data:image/svg+xml,%3Csvg width='9' height='7' viewBox='0 0 9 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.93373 5.34847C8.93373 5.4199 8.89801 5.50025 8.84444 5.55382L8.39801 6.00025C8.34444 6.05382 8.26408 6.08954 8.19265 6.08954C8.12123 6.08954 8.04087 6.05382 7.9873 6.00025L4.47837 2.49132L0.969439 6.00025C0.915867 6.05382 0.83551 6.08954 0.764082 6.08954C0.683725 6.08954 0.612296 6.05382 0.558725 6.00025L0.112296 5.55382C0.0587246 5.50025 0.0230103 5.4199 0.0230103 5.34847C0.0230103 5.27704 0.0587246 5.19668 0.112296 5.14311L4.27301 0.982396C4.32658 0.928824 4.40694 0.89311 4.47837 0.89311C4.5498 0.89311 4.63015 0.928824 4.68372 0.982396L8.84444 5.14311C8.89801 5.19668 8.93373 5.27704 8.93373 5.34847Z' fill='black'/%3E%3C/svg%3E%0A");
+  background-position: center;
+  background-size: 9px 7px;
+  background-repeat: no-repeat;
+  transform: rotate(180deg) translateY(-50%);
+  transform-origin: 50% 50%;
+  transition: transform 0.2s var(--transition-main), background-image 0.2s var(--transition-main);
+}
+
+.choices[data-type*=select-one].is-open::after {
+  top: 50%;
+  margin: 0;
+  background-image: url("data:image/svg+xml,%3Csvg width='9' height='7' viewBox='0 0 9 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.93373 5.34847C8.93373 5.4199 8.89801 5.50025 8.84444 5.55382L8.39801 6.00025C8.34444 6.05382 8.26408 6.08954 8.19265 6.08954C8.12123 6.08954 8.04087 6.05382 7.9873 6.00025L4.47837 2.49132L0.969439 6.00025C0.915867 6.05382 0.83551 6.08954 0.764082 6.08954C0.683725 6.08954 0.612296 6.05382 0.558725 6.00025L0.112296 5.55382C0.0587246 5.50025 0.0230103 5.4199 0.0230103 5.34847C0.0230103 5.27704 0.0587246 5.19668 0.112296 5.14311L4.27301 0.982396C4.32658 0.928824 4.40694 0.89311 4.47837 0.89311C4.5498 0.89311 4.63015 0.928824 4.68372 0.982396L8.84444 5.14311C8.89801 5.19668 8.93373 5.27704 8.93373 5.34847Z' fill='white'/%3E%3C/svg%3E%0A");
+  transform: rotate(0deg) translateY(-50%);
+}
+
+.choices.is-open .choices__inner {
+  border: 1px solid var(--bright-gray);
+  border-bottom: none;
+  background-color: rgba(61, 64, 80, 0.85);
+}
+.choices.is-open .choices__item {
+  color: var(--white-color);
+  background-color: transparent;
+  transition: color 0.2s var(--transition-main);
+}
+.choices.is-open .choices__item.is-highlighted {
+  color: var(--picton-blue);
+  background-color: transparent;
+}
+.choices.is-open .choices__list--dropdown {
+  overflow: hidden;
+  border: 1px solid var(--bright-gray);
+  border-top: none;
+  border-bottom-left-radius: var(--border-radius-xsmall);
+  border-bottom-right-radius: var(--border-radius-xsmall);
+  background-color: rgba(39, 39, 51, 0.9);
 }
 /*# sourceMappingURL=style.css.map */
