--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 @font-face {
+  font-family: "Lato-ExtraBold";
+  src: url("../fonts/Lato-ExtraBold.woff2") format("woff2"), url("../Lato-ExtraBold.woff") format("woff");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
   font-family: "Lato-Bold";
   src: url("../fonts/Lato-Bold.woff2") format("woff2"), url("../Lato-Bold.woff") format("woff");
   font-weight: 400;
@@ -9,13 +16,6 @@
 @font-face {
   font-family: "Lato-Regular";
   src: url("../fonts/Lato-Regular.woff2") format("woff2"), url("../Lato-Regular.woff") format("woff");
-  font-weight: 400;
-  font-display: swap;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Lato-ExtraBold";
-  src: url("../fonts/Lato-ExtraBold.woff2") format("woff2"), url("../Lato-ExtraBold.woff") format("woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -920,6 +920,8 @@ img {
 
 .form__field {
   flex: 0 1 33.333%;
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 30px;
   padding: 0 15px;
   max-width: 33.333%;
@@ -967,5 +969,61 @@ img {
 }
 .form__input:focus::placeholder, .form__input:focus-visible::placeholder {
   color: var(--white-color);
+}
+
+.form__name {
+  display: block;
+  margin-right: auto;
+  margin-bottom: 18px;
+  font-size: 18px;
+  line-height: 22px;
+  color: var(--white-color);
+}
+
+.form__value {
+  display: block;
+  font-size: 18px;
+  line-height: 22px;
+  color: var(--white-color);
+}
+.form__value::after {
+  content: "%";
+}
+
+.form__range {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: block;
+  border: 1px solid var(--white-color);
+  border-radius: var(--border-radius-xsmall);
+  padding: 0;
+  width: 100%;
+  height: 6px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  display: block;
+  border: 3px solid var(--jelly-bean);
+  border-radius: 100%;
+  width: 24px;
+  height: 24px;
+  background-color: var(--picton-blue);
+  cursor: pointer;
+}
+
+input[type=range]::-moz-range-thumb {
+  -moz-appearance: none;
+  appearance: none;
+  display: block;
+  border: 3px solid var(--jelly-bean);
+  border-radius: 100%;
+  width: 24px;
+  height: 24px;
+  background-color: var(--picton-blue);
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
